# atreides

./: .env.example  .gitignore  CLAUDE.md  README.md  project.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cerberus.yml  release.yml
.groom/: plan-2026-02-28.md
src/atreides/: __init__.py  __main__.py  cli.py  config.py  models.py  risk.py
src/atreides/exchange/: __init__.py  base.py  kalshi.py
src/atreides/strategy/: base.py
tests/: test_kalshi.py  test_models.py  test_risk.py
