[project]
name = "atreides"
version = "0.1.0"
description = "Prediction market trading bot"
readme = "README.md"
authors = [
    { name = "phrazzld", email = "phrazzld@pm.me" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=13.9",
    "websockets>=14.0",
    "duckdb>=1.2",
    "kalshi-python>=2.1.4",
    "cryptography>=46.0.5",
]

[project.scripts]
atreides = "atreides.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atreides"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
